[gd_scene load_steps=109 format=3 uid="uid://bg60q61fxbuyh"]

[ext_resource type="Script" uid="uid://d6nw3dgb0ua8" path="res://Scenes/Characters/Player/Player.gd" id="1_kyqiw"]
[ext_resource type="Resource" uid="uid://fvmnrqbmwkx4" path="res://Scenes/Functionalities/Inventory/PlayerInventory.tres" id="2_dewec"]
[ext_resource type="Texture2D" uid="uid://mb1gk4c7ukpl" path="res://Assets/PlayerSpriteSheets/ArshaIdleSpriteSheet.png" id="3_5ixxa"]
[ext_resource type="Texture2D" uid="uid://dhyb2i4j8yy1x" path="res://Assets/PlayerSpriteSheets/Main Character/Exported/ArshaWoodCuttingSheet.png" id="3_nn08x"]
[ext_resource type="Texture2D" uid="uid://b8tco0w3qe2sh" path="res://Assets/PlayerSpriteSheets/Main Character/Exported/Fishing/FishingCaught.png" id="4_bhhdu"]
[ext_resource type="Texture2D" uid="uid://cmkksd3b3mh8m" path="res://Assets/PlayerSpriteSheets/Main Character/Exported/Fishing/FishingBite.png" id="4_megsn"]
[ext_resource type="Texture2D" uid="uid://bu5rams6ub7jw" path="res://Assets/PlayerSpriteSheets/Main Character/Exported/Fishing/FishingCast.png" id="4_nn08x"]
[ext_resource type="Texture2D" uid="uid://decp1ibo0vvcr" path="res://Assets/PlayerSpriteSheets/Main Character/Exported/Fishing/FishingIdle.png" id="5_52ee3"]
[ext_resource type="Texture2D" uid="uid://ww17lctfd0lt" path="res://Assets/PlayerSpriteSheets/Main Character/Exported/RunAnimations.png" id="6_nn08x"]
[ext_resource type="Script" uid="uid://dqgkrofdwddbg" path="res://Scenes/Skills/Fishing/FishingScripts/FishingController.gd" id="10_m81am"]

[sub_resource type="AtlasTexture" id="AtlasTexture_rxg2u"]
atlas = ExtResource("3_nn08x")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xixlo"]
atlas = ExtResource("3_nn08x")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bfbt0"]
atlas = ExtResource("3_nn08x")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wosd6"]
atlas = ExtResource("3_nn08x")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_00okb"]
atlas = ExtResource("3_nn08x")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6hr71"]
atlas = ExtResource("3_nn08x")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6y60"]
atlas = ExtResource("3_nn08x")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vmcrb"]
atlas = ExtResource("3_nn08x")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_teras"]
atlas = ExtResource("3_nn08x")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8p516"]
atlas = ExtResource("3_nn08x")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fvoow"]
atlas = ExtResource("3_nn08x")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v5fqo"]
atlas = ExtResource("3_nn08x")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hkrn1"]
atlas = ExtResource("3_nn08x")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wpo1r"]
atlas = ExtResource("3_nn08x")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pqity"]
atlas = ExtResource("3_nn08x")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_opqna"]
atlas = ExtResource("3_nn08x")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jhxql"]
atlas = ExtResource("4_megsn")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ilb4b"]
atlas = ExtResource("4_megsn")
region = Rect2(80, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_tlew5"]
atlas = ExtResource("4_megsn")
region = Rect2(0, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_h55a1"]
atlas = ExtResource("4_megsn")
region = Rect2(80, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqj3d"]
atlas = ExtResource("4_megsn")
region = Rect2(0, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_f6yay"]
atlas = ExtResource("4_megsn")
region = Rect2(80, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ao2s2"]
atlas = ExtResource("4_megsn")
region = Rect2(0, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_opjds"]
atlas = ExtResource("4_megsn")
region = Rect2(80, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_jawh0"]
atlas = ExtResource("4_nn08x")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_jq6en"]
atlas = ExtResource("4_nn08x")
region = Rect2(80, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_fgqou"]
atlas = ExtResource("4_bhhdu")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_01r87"]
atlas = ExtResource("4_bhhdu")
region = Rect2(80, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_6626w"]
atlas = ExtResource("4_bhhdu")
region = Rect2(0, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_1g8ls"]
atlas = ExtResource("4_nn08x")
region = Rect2(0, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_4wp3f"]
atlas = ExtResource("4_nn08x")
region = Rect2(80, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_867uf"]
atlas = ExtResource("4_bhhdu")
region = Rect2(80, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ilcf"]
atlas = ExtResource("4_bhhdu")
region = Rect2(0, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_x1vvj"]
atlas = ExtResource("4_nn08x")
region = Rect2(0, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_y07qb"]
atlas = ExtResource("4_nn08x")
region = Rect2(80, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_6id3a"]
atlas = ExtResource("4_bhhdu")
region = Rect2(80, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_50dqm"]
atlas = ExtResource("4_nn08x")
region = Rect2(80, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_7j56s"]
atlas = ExtResource("4_nn08x")
region = Rect2(0, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_w1x0d"]
atlas = ExtResource("4_bhhdu")
region = Rect2(0, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ovjwc"]
atlas = ExtResource("4_bhhdu")
region = Rect2(80, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ddly5"]
atlas = ExtResource("4_nn08x")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_omi2y"]
atlas = ExtResource("4_nn08x")
region = Rect2(80, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_75iyv"]
atlas = ExtResource("4_nn08x")
region = Rect2(160, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_yrofn"]
atlas = ExtResource("4_nn08x")
region = Rect2(240, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_5gg6q"]
atlas = ExtResource("4_nn08x")
region = Rect2(0, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_wenux"]
atlas = ExtResource("4_nn08x")
region = Rect2(80, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_vy33c"]
atlas = ExtResource("4_nn08x")
region = Rect2(160, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_h1ppb"]
atlas = ExtResource("4_nn08x")
region = Rect2(240, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_k22kr"]
atlas = ExtResource("4_nn08x")
region = Rect2(0, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4i3a"]
atlas = ExtResource("4_nn08x")
region = Rect2(80, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_rocfp"]
atlas = ExtResource("4_nn08x")
region = Rect2(160, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_uytvf"]
atlas = ExtResource("4_nn08x")
region = Rect2(240, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_u4y2r"]
atlas = ExtResource("4_nn08x")
region = Rect2(0, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_tbv6f"]
atlas = ExtResource("4_nn08x")
region = Rect2(80, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_vp15a"]
atlas = ExtResource("4_nn08x")
region = Rect2(160, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_fayk8"]
atlas = ExtResource("4_nn08x")
region = Rect2(240, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_s7lb4"]
atlas = ExtResource("5_52ee3")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ed4yo"]
atlas = ExtResource("5_52ee3")
region = Rect2(80, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_fsa4a"]
atlas = ExtResource("5_52ee3")
region = Rect2(0, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_6f3s4"]
atlas = ExtResource("5_52ee3")
region = Rect2(80, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_l3y8b"]
atlas = ExtResource("5_52ee3")
region = Rect2(0, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ujsok"]
atlas = ExtResource("5_52ee3")
region = Rect2(80, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_txwsf"]
atlas = ExtResource("5_52ee3")
region = Rect2(0, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_i10l2"]
atlas = ExtResource("5_52ee3")
region = Rect2(80, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_nn08x"]
atlas = ExtResource("3_5ixxa")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_52ee3"]
atlas = ExtResource("3_5ixxa")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bhhdu"]
atlas = ExtResource("3_5ixxa")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_megsn"]
atlas = ExtResource("3_5ixxa")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i2e8t"]
atlas = ExtResource("3_5ixxa")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lyrkg"]
atlas = ExtResource("3_5ixxa")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c43xd"]
atlas = ExtResource("3_5ixxa")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_avx33"]
atlas = ExtResource("3_5ixxa")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ixxa"]
atlas = ExtResource("6_nn08x")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yoq75"]
atlas = ExtResource("6_nn08x")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ksbbd"]
atlas = ExtResource("6_nn08x")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lslt6"]
atlas = ExtResource("6_nn08x")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ulo2v"]
atlas = ExtResource("6_nn08x")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1iu4k"]
atlas = ExtResource("6_nn08x")
region = Rect2(320, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m0x7a"]
atlas = ExtResource("6_nn08x")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5v66d"]
atlas = ExtResource("6_nn08x")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x63xi"]
atlas = ExtResource("6_nn08x")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_awd2i"]
atlas = ExtResource("6_nn08x")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o2sks"]
atlas = ExtResource("6_nn08x")
region = Rect2(256, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3rw25"]
atlas = ExtResource("6_nn08x")
region = Rect2(320, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_glx4g"]
atlas = ExtResource("6_nn08x")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_miouo"]
atlas = ExtResource("6_nn08x")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o3h8g"]
atlas = ExtResource("6_nn08x")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1e7my"]
atlas = ExtResource("6_nn08x")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_arntx"]
atlas = ExtResource("6_nn08x")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yf17c"]
atlas = ExtResource("6_nn08x")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qidb7"]
atlas = ExtResource("6_nn08x")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_70hv0"]
atlas = ExtResource("6_nn08x")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8flut"]
atlas = ExtResource("6_nn08x")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u7x0b"]
atlas = ExtResource("6_nn08x")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_utwlt"]
atlas = ExtResource("6_nn08x")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kih0c"]
atlas = ExtResource("6_nn08x")
region = Rect2(320, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_yoq75"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rxg2u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xixlo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bfbt0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wosd6")
}],
"loop": false,
"name": &"AxeDown",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_00okb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6hr71")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6y60")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vmcrb")
}],
"loop": false,
"name": &"AxeLeft",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_teras")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8p516")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fvoow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v5fqo")
}],
"loop": false,
"name": &"AxeRight",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hkrn1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wpo1r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pqity")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_opqna")
}],
"loop": false,
"name": &"AxeUp",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jhxql")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ilb4b")
}],
"loop": false,
"name": &"FishBiteDown",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tlew5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h55a1")
}],
"loop": false,
"name": &"FishBiteLeft",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqj3d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f6yay")
}],
"loop": false,
"name": &"FishBiteRight",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ao2s2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_opjds")
}],
"loop": false,
"name": &"FishBiteUp",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jawh0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jq6en")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fgqou")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_01r87")
}],
"loop": false,
"name": &"FishCaughtDown",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6626w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1g8ls")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4wp3f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_867uf")
}],
"loop": false,
"name": &"FishCaughtLeft",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ilcf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x1vvj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y07qb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6id3a")
}],
"loop": false,
"name": &"FishCaughtRight",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_50dqm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7j56s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w1x0d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ovjwc")
}],
"loop": false,
"name": &"FishCaughtUp",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ddly5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_omi2y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_75iyv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yrofn")
}],
"loop": false,
"name": &"FishingCastDown",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5gg6q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wenux")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vy33c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h1ppb")
}],
"loop": false,
"name": &"FishingCastLeft",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k22kr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4i3a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rocfp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uytvf")
}],
"loop": false,
"name": &"FishingCastRight",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u4y2r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tbv6f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vp15a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fayk8")
}],
"loop": false,
"name": &"FishingCastUp",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s7lb4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ed4yo")
}],
"loop": true,
"name": &"FishingIdleDown",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fsa4a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6f3s4")
}],
"loop": true,
"name": &"FishingIdleLeft",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l3y8b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ujsok")
}],
"loop": true,
"name": &"FishingIdleRight",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_txwsf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i10l2")
}],
"loop": true,
"name": &"FishingIdleUp",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nn08x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_52ee3")
}],
"loop": true,
"name": &"IdleDown",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bhhdu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_megsn")
}],
"loop": true,
"name": &"IdleLeft",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i2e8t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lyrkg")
}],
"loop": true,
"name": &"IdleRight",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c43xd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_avx33")
}],
"loop": true,
"name": &"IdleUp",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ixxa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yoq75")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ksbbd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lslt6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ulo2v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1iu4k")
}],
"loop": true,
"name": &"WalkDown",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m0x7a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5v66d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x63xi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_awd2i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o2sks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3rw25")
}],
"loop": true,
"name": &"WalkLeft",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_glx4g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_miouo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o3h8g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1e7my")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_arntx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yf17c")
}],
"loop": true,
"name": &"WalkRight",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qidb7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_70hv0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8flut")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u7x0b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_utwlt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kih0c")
}],
"loop": true,
"name": &"WalkUp",
"speed": 9.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_oudfo"]
radius = 5.0
height = 10.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_mask = 2
motion_mode = 1
script = ExtResource("1_kyqiw")
inv = ExtResource("2_dewec")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -8)
scale = Vector2(0.75, 0.75)
sprite_frames = SubResource("SpriteFrames_yoq75")
animation = &"FishCaughtUp"
frame = 3
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -3)
shape = SubResource("CapsuleShape2D_oudfo")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.2, 1.2)
editor_draw_limits = true

[node name="InteractRay" type="RayCast2D" parent="."]
position = Vector2(0, -9)
target_position = Vector2(14, 0)
collision_mask = 4
hit_from_inside = true
collide_with_areas = true

[node name="FishingController" type="Node" parent="."]
script = ExtResource("10_m81am")

[node name="BiteTimer" type="Timer" parent="FishingController"]
one_shot = true

[node name="BiteWindowTimer" type="Timer" parent="FishingController"]
one_shot = true

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_AnimatedSprite2D_animation_finished"]
